<resources>
    <string name="common_save_upper">Save</string>
    <string name="common_cancel_upper">Cancel</string>
    <string name="common_modify_upper">Modify</string>
    <string name="common_yes_upper">Yes</string>
    <string name="common_no_upper">No</string>
    <string name="common_loading_upper">Loading...</string>
    <string name="common_registration_upper">Registration...</string>
    <string name="common_home_upper">Home</string>
    <string name="common_sign_up_upper">Sign Up</string>
    <string name="common_sign_in_upper">Sign In</string>
    <string name="common_back">back</string>
    <string name="common_back_upper">Back</string>
    <string name="common_send_email_upper">Send Mail</string>
    <string name="common_email_upper">Email</string>
    <string name="common_email_upper_colon">Email:</string>
    <string name="common_password_upper">Password</string>
    <string name="common_confirm_password_upper">Confirm password</string>
    <string name="common_log_in_upper">Login</string>
    <string name="common_log_in_upper_colon">Login:</string>
    <string name="common_sharing_first_part">just commented on</string>
    <string name="common_sharing_second_part">image via</string>
    <string name="common_sharing_third_part">download the iPhone/Android</string>
    <string name="common_login_with_facebook_upper">Login with Facebook</string>
    <string name="common_login_with_twitter_upper">Login with Twitter</string>
    <string name="common__login_with_ibuildapp_upper">Login with iBuildApp</string>
    <string name="common_login_with_email_upper">Login with Email</string>
    <string name="common_emaillogin_use_email_upper">Use your e-mail to login</string>
    <string name="common_seconds">seconds</string>
    <string name="common_a_minute_ago">a minute ago</string>
    <string name="common_minutes">minutes</string>
    <string name="common_an_hour_ago">an hour ago</string>
    <string name="common_hours">hours</string>
    <string name="common_one_day">one day</string>
    <string name="common_days">days</string>
    <string name="common_date_just_now">Just now</string>
    <string name="common_date_yesterday">Yesterday</string>
    <string name="common_account">account</string>
    <string name="common_tap_to_enter">Tap to enter</string>
    <string name="common_clear_upper">Clear</string>
    <string name="common_done_upper">Done</string>
    <string name="tablereservation_submit">Submit</string>
    <string name="common_confirm_upper">Confirm</string>
    <string name="common_address_upper_colon">Address:</string>
    <string name="common_parking_upper_colon">Parking:</string>
    <string name="common_add_to_calendar">Add to Calendar</string>
    <string name="common_get_direction">Get Direction</string>
    <string name="common_date_upper">Date</string>
    <string name="common_time_upper">Time</string>
    <string name="tablereservation_common_specify_upper">Specify</string>
    <string name="common_firstname_upper">First name</string>
    <string name="common_lastname_upper">Last name</string>
    <string name="common_registration_agreement">By clicking on checkbox you are indicating that you have read and agree th the Terms of Use</string>
    <string name="alert_no_internet">Cellular Data is Turned off. Turn on cellular data or use Wi-Fi to access data</string>
    <string name="alert_cannot_init">Initialization failed. Please try again</string>
    <string name="alert_twitter_auth_error">Twitter authorization failed</string>
    <string name="alert_facebook_auth_error">Facebook authorization failed</string>
    <string name="alert_email_auth_error">Email authorization failed</string>
    <string name="alert_not_logged_in">You are not logged in</string>
    <string name="alert_invalid_email">Invalid email</string>
    <string name="alert_gps_not_available">GPS service is not available</string>
    <string name="alert_gps_initialization">Wait for initialization GPS service</string>
    <string name="alert_gps_wrong_route">Cannot initialize route</string>
    <string name="alert_registration_email_inuse">This email is in use. Please use another email</string>
    <string name="alert_registration_fillin_fields">Fill in all the fields</string>
    <string name="alert_registration_spam">First and Last name match each other. This seems like a spam, please change Last or First name</string>
    <string name="alert_registration_two_symbols_name">Your name should have at least 2 characters</string>
    <string name="alert_registration_two_symbols_password">Your password should have at least 2 characters</string>
    <string name="alert_registration_correct_email">Please enter correct email address</string>
    <string name="alert_registration_password_dont_match">Passwords don\'t match</string>
    <string name="alert_registration_error">Registration error</string>
    <string name="app_name">Java_House</string>
    <string name="tablereservation_module">Table Reservation</string>
    <string name="tablereservation_reservation">Reservation</string>
    <string name="tablereservation_make_reservation">Make a Reservation</string>
    <string name="tablereservation_plugin">TableReservationPlugin</string>
    <string name="tablereservation_my_reservations">My Reservations</string>
    <string name="tablereservation_sign_in"><u>Sign in</u></string>
    <string name="tablereservation_upcoming">Upcoming reservations</string>
    <string name="tablereservation_past">Past Reservations</string>
    <string name="tablereservation_no_reservations">No prior reservations</string>
    <string name="tablereservation_or_sign_up_first_part">Or sign up to</string>
    <string name="tablereservation_reserve_as_a_guest">Reserve as a guest</string>
    <string name="tablereservation_show_direction">Show direction</string>
    <string name="tablereservation_reservation_details">Your reservation details:</string>
    <string name="tablereservation_contact_phone">Contact phone:</string>
    <string name="tablereservation_spec_request_enter">Please enter your special request:</string>
    <string name="tablereservation_spec_request_add">Add Special Request</string>
    <string name="tablereservation_spec_request">Special Request</string>
    <string name="tablereservation_summary">Summary</string>
    <string name="tablereservation_party_size">Party size</string>
    <string name="tablereservation_person">Person</string>
    <string name="tablereservation_persons">Persons</string>
    <string name="tablereservation_one_person">Person</string>
    <string name="tablereservation_party_of">Party of</string>
    <string name="tablereservation_guest">Guest</string>
    <string name="tablereservation_login_with_facebook_upper">Login with Facebook</string>
    <string name="tablereservation_login_with_twitter_upper">Login with Twitter</string>
    <string name="tablereservation_login">Login</string>
    <string name="tablereservation_warning_too_late">Too late. The Reservation could not be made at this time</string>
    <string name="tablereservation_warning_wrong_time">The Reservation could not be made at this time</string>
    <string name="tablereservation_warning_timeout">Unable connect to server</string>
    <string name="tablereservation_warning_cancel_reservation">Are you sure you want to cancel the reservation?</string>
    <string name="tablereservation_warning_reservation_canceled">Your reservation was canceled</string>
    <string name="new_text">New Text</string>
    <string name="restaurant">Restaurant</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="you_have_upcoming_reservation">You have upcoming reservation</string>
    <string name="your_reservation_details">Your reservation details:</string>
    <string name="there_are_no_upcoming_reservations">There are no upcoming reservations</string>
    <string name="sunday_march">Sunday, March 3</string>
    <string name="seven_pm_for_2_people">7:00 PM for 2 people</string>
    <string name="view">View</string>
    <string name="username">Username</string>
    <string name="add_special_request">Add Special Request</string>
    <string name="or_sign_in_to_app_name_account">Sign in with email:</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="looking_forward_to_see_you">looking forward to see you!</string>
    <string name="tap_to_enter">Tap to enter</string>
    <string name="loading">Loading...</string>
    <string name="tablereservation_people_for">people</string>
    <string name="tablereservation_ampersand">\u0020&amp;\u0020</string>
    <string name="romanblack_rss_from">from</string>
    <string name="romanblack_rss_at">at</string>
    <string name="romanblack_rss_reverse">Reverse</string>
    <string name="romanblack_rss_refresh">Refresh</string>
    <string name="romanblack_rss_yes">Yes</string>
    <string name="romanblack_rss_no">No</string>
    <string name="romanblack_rss_feed">Feed</string>
    <string name="romanblack_rss_html_page">HTML page</string>
    <string name="romanblack_rss_send_email">Send email...</string>
    <string name="romanblack_rss_read_more">read more</string>
    <string name="romanblack_rss_show_media">Play media</string>
    <string name="romanblack_rss_loading">Loading...</string>
    <string name="romanblack_rss_cannot_init">Cannot initialize plugin.</string>
    <string name="rss_back_button">Back</string>
    <string name="rss_home_button">Home</string>
    <string name="romanblack_rss_alert_no_internet">Cellular Data is Turned off. Turn on cellular data or use Wi-Fi to access data</string>
    <string name="romanblack_rss_alert_notifications_added_first_part">Added</string>
    <string name="romanblack_rss_alert_notifications_added_seconds_part">notifications</string>
    <string name="romanblack_rss_alert_video_not_valid">This video link is not valid.</string>
    <string name="romanblack_rss_alert_video_press_play">Press play button.</string>
    <string name="romanblack_rss_dialog_add_notofications">Do you want to add notifications?</string>
    <string name="romanblack_rss_ptr_tap">Tap to refresh...</string>
    <string name="romanblack_rss_ptr_release">Release to refresh...</string>
    <string name="romanblack_rss_ptr_pull">Pull to refresh...</string>
    <string name="title">Title</string>
    <string name="jun">JUN</string>
    <string name="tap_to_refresh">Tap to refresh...</string>
    <string name="one_from_one">1 from 1</string>
    <string name="open_app">Open App</string>
    <string name="close">Close</string>
    <string name="description">Description</string>
    <string name="news_add_event_to_calendar">Add Event to Calendar</string>
    <string name="news_share_event_via_email">Share Event via Email</string>
    <string name="news_share_event_via_sms">Share Event via SMS</string>
    <string name="news_menu_cancel">Cancel</string>
    <string name="romanblack_photogallery_password">Password</string>
    <string name="romanblack_photogallery_or">or</string>
    <string name="romanblack_photogallery_sign_up">Create new account</string>
    <string name="romanblack_photogallery_have_an_account">I have an account</string>
    <string name="romanblack_photogallery_login">Login</string>
    <string name="romanblack_photogallery_login_with_facebook">Login with Facebook</string>
    <string name="romanblack_photogallery_login_with_twitter">Login with Twitter</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot your pass?</string>
    <string name="password_restoration">Password Restoration</string>
    <string name="to_reset_password">To reset your password, type full email address you used to sign in with your app</string>
    <string name="email_upper">Email</string>
    <string name="reset_upper">Reset</string>
</resources>