<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:background="#fff3f3f3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#fff3f3f3" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <EditText android:id="@id/sergeyb_tablereservation_emailsignup_fname" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginTop="30.0dip" android:hint="@string/common_firstname_upper" />
            <EditText android:id="@id/sergeyb_tablereservation_emailsignup_lname" android:layout_width="fill_parent" android:layout_height="55.0dip" android:hint="@string/common_lastname_upper" />
            <EditText android:id="@id/sergeyb_tablereservation_emailsignup_email" android:layout_width="fill_parent" android:layout_height="55.0dip" android:hint="@string/common_email_upper" />
            <EditText android:id="@id/sergeyb_tablereservation_emailsignup_pwd" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginTop="25.0dip" android:hint="@string/common_password_upper" android:password="true" />
            <EditText android:id="@id/sergeyb_tablereservation_emailsignup_rpwd" android:layout_width="fill_parent" android:layout_height="55.0dip" android:hint="@string/common_confirm_password_upper" android:password="true" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/sergeyb_tablereservation_emailsignup_layouttems" android:layout_width="fill_parent" android:layout_height="65.0dip">
                <TextView android:id="@id/sergeyb_tablereservation_emailsignup_tvterms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_registration_agreement" android:layout_weight="1.0" />
                <CheckBox android:id="@id/sergeyb_tablereservation_emailsignup_chbterms" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>