<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="260.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="14.0sp" android:layout_gravity="center_horizontal" android:id="@id/menu_button_add_to_calendar" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/news_add_event_to_calendar" />
    <Button android:textSize="14.0sp" android:layout_gravity="center_horizontal" android:id="@id/menu_button_share_via_email" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/news_share_event_via_email" />
    <Button android:textSize="14.0sp" android:layout_gravity="center_horizontal" android:id="@id/menu_button_share_via_sms" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/news_share_event_via_sms" />
    <Button android:textSize="14.0sp" android:layout_gravity="center_horizontal" android:id="@id/menu_button_cancel" android:clickable="false" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="4.0dip" android:text="@string/news_menu_cancel" />
</LinearLayout>