<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/splash_screen_ibuildapp_paied" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/login_screen_restoration_back_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.0">
            <ImageView android:id="@id/login_screen_restoration_back_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/login_screen_restoration_back_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/common_back_upper" />
        </LinearLayout>
        <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/password_restoration" android:layout_weight="1.0" />
        <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/textView3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="2.0" />
    </LinearLayout>
    <ScrollView android:id="@id/scrollView" android:layout_width="wrap_content" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/linearLayout2" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="8.0dip" android:layout_marginTop="16.0dip">
            <LinearLayout android:orientation="vertical" android:background="@drawable/loginscreen_black_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="#ffffffff" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/to_reset_password" />
                <EditText android:id="@id/login_screen_recovery_email_text" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="8.0dip" android:hint="@string/email_upper" android:inputType="textEmailAddress" />
                <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/login_screen_recovery_button" android:background="@drawable/loginscreen_btn_blue" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/reset_upper" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>