<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#fff3f3f3" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="0.0dip" android:paddingRight="20.0dip" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="18.0dip" android:textColor="#ff999999" android:gravity="center_vertical" android:id="@id/romanblack_photogallery_emailauth_fname" android:background="@drawable/sergeyb_photogallery_row_first_dark" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="20.0dip" android:hint="@string/romanblack_photogallery_login" />
            <EditText android:textSize="18.0dip" android:textColor="#ff999999" android:gravity="center_vertical" android:id="@id/romanblack_photogallery_emailauth_lname" android:background="@drawable/sergeyb_photogallery_row_last_dark" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:hint="@string/romanblack_photogallery_password" android:inputType="textPassword" />
            <Button android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/romanblack_photogallery_emailauth_btn_sugnup" android:background="@drawable/romanblack_photogallery_green_btn_bg" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginTop="15.0dip" android:text="@string/login" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>