<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/splash_screen_ibuildapp_paied" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/textView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/login" android:layout_weight="1.0" />
        <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/textView3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <ScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="8.0dip" android:layout_marginTop="16.0dip">
            <LinearLayout android:orientation="vertical" android:background="@drawable/loginscreen_black_bg" android:paddingTop="32.0dip" android:paddingBottom="32.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                <EditText android:id="@id/login_screen_login_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="8.0dip" android:hint="@string/username" />
                <EditText android:id="@id/login_screen_login_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="8.0dip" android:hint="@string/password" android:ems="10" android:inputType="textPassword" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="18.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="18.0dip" android:layout_marginBottom="16.0dip">
                    <CheckBox android:textColor="#ffffffff" android:id="@id/login_screen_remember_me_check_box" android:background="@drawable/login_screen_checkbox" android:layout_width="32.0dip" android:layout_height="32.0dip" android:checked="false" android:button="@drawable/empty" />
                    <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/remember_me" />
                </LinearLayout>
                <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/login_screen_login_button" android:background="@drawable/loginscreen_btn_blue" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/login" />
                <TextView android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@id/forget_your_pass_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forgot_pass" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>