<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/romanblack_feed_item" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:padding="0.0dip" android:paddingTop="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/romanblack_rss_date_bg" android:layout_width="60.0dip" android:layout_height="70.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="0.0dip">
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/romanblack_rss_month" android:paddingTop="0.0dip" android:layout_width="wrap_content" android:layout_height="16.0dip" android:text="@string/jun" android:includeFontPadding="false" />
            <TextView android:textSize="35.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="top" android:id="@id/romanblack_rss_day" android:paddingTop="0.0dip" android:layout_width="wrap_content" android:layout_height="33.0dip" android:text="01" android:includeFontPadding="false" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="13.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="70.0dip" android:layout_weight="1.0">
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff222222" android:id="@id/romanblack_rss_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title" android:singleLine="true" android:includeFontPadding="false" />
            <TextView android:textSize="11.0sp" android:textColor="#ff444444" android:id="@id/romanblack_rss_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description" android:singleLine="true" />
            <TextView android:textSize="9.0sp" android:textColor="#ff444444" android:gravity="right" android:id="@id/romanblack_rss_date" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description" android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>